force-app/main/default/objects/Questionnaire__c/Questionnaire__c.object-meta.xml
<CustomObject>
    <description>IM Customer Center - This object store form details like name, description, language, category and header info.</description>
    <label>Form Template</label>
    <nameField>
        <label>Form Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>