force-app/main/default/objects/Questionnaire__c/fields/Allow_download_copy__c.field-meta.xml
<CustomField>
    <fullName>Allow_download_copy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For check, Allow downloading questionnaire copy</description>
    <label>Allow Download Copy</label>
    <type>Checkbox</type>
</CustomField>