force-app/main/default/objects/Questionnaire__c/fields/Binding_Object__c.field-meta.xml
<CustomField>
    <fullName>Binding_Object__c</fullName>
    <description>Set information for binding object</description>
    <label>Binding Object</label>
    <length>100</length>
    <type>Text</type>
</CustomField>