force-app/main/default/objects/Questionnaire__c/fields/Button_Alignment__c.field-meta.xml
<CustomField>
    <fullName>Button_Alignment__c</fullName>
    <defaultValue>&quot;slds-float_left slds-var-p-around_small&quot;</defaultValue>
    <label>Button Alignment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>