force-app/main/default/objects/Questionnaire__c/fields/Buttons_Position__c.field-meta.xml
<CustomField>
    <fullName>Buttons_Position__c</fullName>
    <defaultValue>&quot;Bottom&quot;</defaultValue>
    <label>Buttons Position</label>
    <length>10</length>
    <type>Text</type>
</CustomField>