force-app/main/default/objects/Questionnaire__c/fields/Community_URL__c.field-meta.xml
<CustomField>
    <fullName>Community_URL__c</fullName>
    <label>Community URL</label>
    <type>Url</type>
</CustomField>