force-app/main/default/objects/Questionnaire__c/fields/Is_Customize_Buttons__c.field-meta.xml
<CustomField>
    <fullName>Is_Customize_Buttons__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Customize Buttons</label>
    <type>Checkbox</type>
</CustomField>