force-app/main/default/objects/Questionnaire__c/fields/is_Published__c.field-meta.xml
<CustomField>
    <fullName>is_Published__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check whether template has been published or not</description>
    <inlineHelpText>Check whether template has been published or not</inlineHelpText>
    <label>Is Published</label>
    <type>Checkbox</type>
</CustomField>