force-app/main/default/objects/Questionnaire__c/fields/isMerge__c.field-meta.xml
<CustomField>
    <fullName>isMerge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Merge All Section</label>
    <type>Checkbox</type>
</CustomField>