force-app/main/default/objects/Questionnaire__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <defaultValue>&quot;English&quot;</defaultValue>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>German</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>Italian</fullName>
            </value>
            <value>
                <fullName>Japanese</fullName>
            </value>
            <value>
                <fullName>Swedish</fullName>
            </value>
            <value>
                <fullName>Korean</fullName>
            </value>
            <value>
                <fullName>Chinese (Traditional)</fullName>
            </value>
            <value>
                <fullName>Chinese (Simplified)</fullName>
            </value>
            <value>
                <fullName>Portuguese (Brazil)</fullName>
            </value>
            <value>
                <fullName>Dutch</fullName>
            </value>
            <value>
                <fullName>Danish</fullName>
            </value>
            <value>
                <fullName>Thai</fullName>
            </value>
            <value>
                <fullName>Finnish</fullName>
            </value>
            <value>
                <fullName>Russian</fullName>
            </value>
            <value>
                <fullName>Spanish (Mexico)</fullName>
            </value>
            <value>
                <fullName>NorwegianTurkish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>