force-app/main/default/objects/Questionnaire__c/fields/Next_Button_Color__c.field-meta.xml
<CustomField>
    <fullName>Next_Button_Color__c</fullName>
    <defaultValue>&quot;#0b7477_#0b7477_#FFFFFF&quot;</defaultValue>
    <label>Next Button Color</label>
    <length>100</length>
    <type>Text</type>
</CustomField>