force-app/main/default/objects/Questionnaire__c/fields/Next_Button_Label__c.field-meta.xml
<CustomField>
    <fullName>Next_Button_Label__c</fullName>
    <defaultValue>&quot;Next Questions&quot;</defaultValue>
    <label>Next Button Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>