force-app/main/default/objects/Questionnaire__c/fields/Previous_Button_Color__c.field-meta.xml
<CustomField>
    <fullName>Previous_Button_Color__c</fullName>
    <defaultValue>&quot;#00aea9_#00aea9_#FFFFFF&quot;</defaultValue>
    <label>Previous Button Color</label>
    <length>100</length>
    <type>Text</type>
</CustomField>