force-app/main/default/objects/Questionnaire__c/fields/Previous_Button_Label__c.field-meta.xml
<CustomField>
    <fullName>Previous_Button_Label__c</fullName>
    <defaultValue>&quot;Previous Questions&quot;</defaultValue>
    <label>Previous Button Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>