force-app/main/default/objects/Questionnaire__c/fields/Send_Copy__c.field-meta.xml
<CustomField>
    <fullName>Send_Copy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For check, questionnaire copy sent or not by mail.</description>
    <label>Send Copy</label>
    <type>Checkbox</type>
</CustomField>