force-app/main/default/objects/Questionnaire__c/fields/Show_Main_Title_to_User__c.field-meta.xml
<CustomField>
    <fullName>Show_Main_Title_to_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to show/hide main title to user</description>
    <label>Show Main Title to User</label>
    <type>Checkbox</type>
</CustomField>