force-app/main/default/objects/Questionnaire__c/fields/Submit_Button_Color__c.field-meta.xml
<CustomField>
    <fullName>Submit_Button_Color__c</fullName>
    <defaultValue>&quot;#2196F3_#2196F3_#FFFFFF&quot;</defaultValue>
    <label>Submit Button Color</label>
    <length>100</length>
    <type>Text</type>
</CustomField>