force-app/main/default/objects/Questionnaire__c/fields/Submit_Button_Label__c.field-meta.xml
<CustomField>
    <fullName>Submit_Button_Label__c</fullName>
    <defaultValue>&quot;Submit&quot;</defaultValue>
    <label>Submit Button Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>