force-app/main/default/objects/Questionnaire__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup with Questionnaire</description>
    <label>Questionnaire</label>
    <referenceTo>Questionnaire__c</referenceTo>
    <relationshipName>Questionnaires</relationshipName>
    <type>Lookup</type>
</CustomField>