force-app/main/default/objects/Questionnaire__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>is_Published__c</columns>
    <columns>Language__c</columns>
    <columns>Allow_download_copy__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>