force-app/main/default/objects/Questionnaire__c/listViews/Forms.listView-meta.xml
<ListView>
    <fullName>Forms</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>is_Published__c</columns>
    <columns>Language__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Form</value>
    </filters>
    <label>Forms</label>
</ListView>